--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,96 @@
+absl-py==0.7.1
+alembic==1.0.10
+amqp==1.4.9
+aniso8601==6.0.0
+anyjson==0.3.3
+astor==0.8.0
+attrs==19.1.0
+Automat==0.7.0
+beautifulsoup4==4.6.3
+billiard==3.3.0.23
+bs4==0.0.1
+cachetools==3.0.0
+celery==3.1.26.post2
+certifi==2018.10.15
+chardet==3.0.4
+Click==7.0
+constantly==15.1.0
+Cython==0.29.1
+dj-database-url==0.5.0
 Django==2.2.1
+django-background-tasks==1.2.0
+django-celery==3.2.2
+django-common-helpers==0.9.2
+django-compat==1.0.15
+django-cron==0.5.1
+django-elasticsearch-dsl==0.5.1
+django-pandas==0.6.1
+django-rq==2.0
+djangorestframework==3.9.2
+elasticsearch==6.3.1
+elasticsearch-dsl==6.1.0
+Flask==1.0.3
+Flask-Cors==3.0.7
+Flask-MySQL==1.4.0
+Flask-RESTful==0.3.7
+Flask-SQLAlchemy==2.4.0
+furniture==0.0.1
+gast==0.2.2
+google-api-python-client==1.7.4
+google-auth==1.6.1
+google-auth-httplib2==0.0.3
+grpcio==1.21.1
+gunicorn==19.9.0
+h5py==2.9.0
+httplib2==0.12.0
+hyperlink==19.0.0
+idna==2.7
+incremental==17.5.0
+ipaddress==1.0.22
+itsdangerous==1.1.0
+Jinja2==2.10
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+kombu==3.0.37
+Mako==1.0.11
+markdown==3.1.1
+MarkupSafe==1.1.0
+mock==3.0.5
+mysqlclient==1.4.2
+numpy==1.15.4
+oauth2client==4.1.3
+opencv-python==3.4.3.18
+pandas==0.24.2
+pprint==0.1
+products==0.0.1
+protobuf==3.8.0
+psycopg2==2.8.2
+psycopg2-binary==2.8.2
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+pygdbmi==0.9.0.1
+PyHamcrest==1.9.0
+PyMySQL==0.9.3
+python-dateutil==2.7.5
+python-editor==1.0.4
+python-json-logger==0.1.11
+python-logstash==0.4.6
+pytz==2019.1
+redis==3.2.1
+requests==2.20.0
+rq==1.0
+rsa==4.0
+schedule==0.6.0
+six==1.11.0
+SQLAlchemy==1.3.4
+sqlparse==0.3.0
+tensorboard==1.13.1
+tensorflow==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+tornado==6.0.2
+uritemplate==3.0.0
+urllib3==1.24.1
+Werkzeug==0.14.1
+whitenoise==3.3.1
+zope.interface==4.6.0
